chore: update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,18 +7,38 @@
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "json.schemas": [
+  "json-schema-plus.schemas": [
     {
       "fileMatch": [
         "completions/*/language/*.json"
       ],
-      "url": "/schema/completion-manifest.zh-CN.json"
+      "urls": [
+        {
+          "language": "zh",
+          "url": "/schema/completion-manifest.zh-CN.json"
+        },
+        {
+          "language": "en",
+          "url": "/schema/completion-manifest.en-US.json"
+        }
+      ],
+      "url": "/schema/completion-manifest.en-US.json"
     },
     {
       "fileMatch": [
         "completions/*/config.json"
       ],
-      "url": "/schema/completion-config.zh-CN.json"
+      "urls": [
+        {
+          "language": "zh",
+          "url": "/schema/completion-config.zh-CN.json"
+        },
+        {
+          "language": "en",
+          "url": "/schema/completion-config.en-US.json"
+        }
+      ],
+      "url": "/schema/completion-config.en-US.json"
     }
   ]
 }
