chore: update json schema

--- a/schema/completion-manifest.en-US.json
+++ b/schema/completion-manifest.en-US.json
@@ -23,6 +23,9 @@
     },
     "name": {
       "description": "Command name",
+      "examples": [
+        ""
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/string"
@@ -40,6 +43,9 @@
     },
     "alias": {
       "description": "Command alias",
+      "examples": [
+        []
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/array-items-string"
