--- a/schema/completion-manifest.zh-CN.json
+++ b/schema/completion-manifest.zh-CN.json
@@ -23,6 +23,9 @@
     },
     "name": {
       "description": "命令名称",
+      "examples": [
+        ""
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/string"
@@ -40,6 +43,9 @@
     },
     "alias": {
       "description": "命令别名",
+      "examples": [
+        []
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/array-items-string"
