feat(schema): update

--- a/schema/completion-config.en-US.json
+++ b/schema/completion-config.en-US.json
@@ -641,11 +641,8 @@
       }
     },
     "hooks": {
-      "markdownDescription": "Whether to use hooks\n- If enabled, you need to create a `hooks.ps1` file",
-      "type": "boolean",
-      "examples": [
-        true
-      ]
+      "markdownDescription": "Define the default value of hooks.\n\n- If it is `false`, enable it manually: `psc completion xxx enable_hooks 1`\n- If it do not need hooks, please remove it.",
+      "type": "boolean"
     },
     "alias": {
       "$ref": "#/definitions/array",
