--- a/schema/completion-config.zh-CN.json
+++ b/schema/completion-config.zh-CN.json
@@ -641,11 +641,8 @@
       }
     },
     "hooks": {
-      "markdownDescription": "是否使用 hooks\n- 如果启用，需要创建一个 `hooks.ps1`",
-      "type": "boolean",
-      "examples": [
-        true
-      ]
+      "markdownDescription": "定义 hooks 的默认值\n\n- 如果为 `false`，则需要手动启用它: `psc completion xxx enable_hooks 1`\n- 如果不需要 hooks，请移除这个字段",
+      "type": "boolean"
     },
     "alias": {
       "$ref": "#/definitions/array",
