--- a/schema/completion-manifest.zh-CN.json
+++ b/schema/completion-manifest.zh-CN.json
@@ -72,7 +72,13 @@
     },
     "tip": {
       "$ref": "#/definitions/array-items-string",
-      "markdownDescription": "补全的提示信息\n- 它一般由三部分组成: 用法(Usage) + 描述(Description) + 举例(Example)\n- 这里有一个示例:\n```json\n  \"tip\": [\n    \"U: -r, --revisions <REVSETS>\\n\",\n    \"xxx (这里是描述信息)\\n\",\n    \"E: -r '@-'   --- xxx (示例说明)\\n\"\n    \"   -r 'x-'   --- xxx (示例说明)\"\n  ]\n  ```"
+      "markdownDescription": "补全的提示信息\n- 它一般由三部分组成: 用法(Usage) + 描述(Description) + 举例(Example)\n- 这里有一个示例:\n```json\n  \"tip\": [\n    \"U: -r, --revisions <REVSETS>\",\n    \"xxx (这里是描述信息)\",\n    \"E: -r '@-'   --- xxx (示例说明)\"\n    \"   -r 'x-'   --- xxx (示例说明)\"\n  ]\n  ```",
+      "not": {
+        "contains": {
+          "pattern": "\\n"
+        }
+      },
+      "errorMessage": "数组中的每个项会在显示时末尾自动添加换行符，因此不允许使用换行符"
     },
     "item": {
       "type": "object",
@@ -204,6 +210,33 @@
     }
   },
   "properties": {
+    "meta": {
+      "type": "object",
+      "description": "补全命令的相关信息",
+      "required": [
+        "url",
+        "description"
+      ],
+      "properties": {
+        "url": {
+          "$ref": "#/definitions/string",
+          "description": "命令的主页或仓库地址",
+          "pattern": "^https?://",
+          "errorMessage": "它必须是一个有效的 http/https URL"
+        },
+        "description": {
+          "$ref": "#/definitions/array-items-string",
+          "description": "命令的描述",
+          "not": {
+            "contains": {
+              "pattern": "\\n"
+            }
+          },
+          "errorMessage": "数组中的每个项会在显示时末尾自动添加换行符，因此不允许使用换行符"
+        }
+      },
+      "additionalProperties": false
+    },
     "root": {
       "description": "根命令",
       "$ref": "#/definitions/array",
@@ -224,32 +257,6 @@
       "items": {
         "$ref": "#/definitions/item_without_options"
       }
-    },
-    "info": {
-      "markdownDescription": "一些额外的信息\n- 它们可以在此 json 文件的 `tip` 字段中使用 `{{ $info.xxx }}` 进行访问",
-      "type": "object",
-      "minProperties": 1
-    },
-    "meta": {
-      "type": "object",
-      "description": "补全命令的相关信息",
-      "required": [
-        "url",
-        "description"
-      ],
-      "properties": {
-        "url": {
-          "$ref": "#/definitions/string",
-          "description": "命令的主页或仓库地址",
-          "pattern": "^https?://",
-          "errorMessage": "它必须是一个有效的 http/https URL"
-        },
-        "description": {
-          "$ref": "#/definitions/array-items-string",
-          "description": "命令的描述"
-        }
-      },
-      "additionalProperties": false
     },
     "config": {
       "description": "补全的特殊配置项",
@@ -289,6 +296,11 @@
           }
         }
       }
+    },
+    "info": {
+      "markdownDescription": "一些额外的信息\n- 它们可以在此 json 文件的 `tip` 字段中使用 `{{ $info.xxx }}` 进行访问\n- 如果需要换行，请使用 `\\n`",
+      "type": "object",
+      "minProperties": 1
     }
   },
   "additionalProperties": false
