docs: update ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -10,8 +10,6 @@ body:
       label: Before Start
       description: Have you verified the following?
       options:
-        - label: You are using the latest version of PSCompletions.
-          required: true
         - label: You have read this repository's README file.
           required: true
         - label: You have search for related issues in [Issues](https://github.com/abgox/PSCompletions/issues).
@@ -19,12 +17,17 @@ body:
         - label: If it is a problem related to menu, please ensure that you have checked `psc menu config`.
           required: true
         - label: You have visit https://pscompletions.abgox.com/
+  - type: input
+    id: version
+    attributes:
+      label: Current version of PSCompletions
+      description: Run `psc` to get the current version
+      placeholder: v6.2.0
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: PowerShell Version
-      description: |
-        - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell 5.1 (Windows builtin version)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       render: console
       placeholder: |
         PS> $PSVersionTable
