--- a/.github/ISSUE_TEMPLATE/feature-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request-cn.yml
@@ -9,8 +9,6 @@ body:
     attributes:
       label: 开始之前...
       options:
-        - label: 你正在使用 PSCompletions 的最新版本。
-          required: true
         - label: 你已经阅读了项目的 README 文件。
           required: true
         - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
@@ -28,27 +26,32 @@ body:
         - 你认为有哪些可行的实现方案作为参考？
     validations:
       required: true
-  - type: dropdown
-    id: powershell-version
+  - type: input
+    id: version
     attributes:
-      label: 你正在使用什么 Powershell 版本?
-      description: |
-        - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell 5.1 (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
-      options:
-        - PowerShell
-        - Windows PowerShell
-      multiple: true
+      label: 当前使用的 PSCompletions 版本
+      description: 运行 `psc` 查看当前版本
+      placeholder: v6.2.0
     validations:
       required: true
-  - type: dropdown
-    id: system
+  - type: textarea
     attributes:
-      label: 你正在使用什么系统环境?
-      options:
-        - Windows
-        - Other system
-      multiple: true
+      label: Powershell 版本
+      render: console
+      placeholder: |
+        PS> $PSVersionTable
+
+        Name                           Value
+        ----                           -----
+        PSVersion                      7.5.0
+        PSEdition                      Core
+        GitCommitId                    7.5.0
+        OS                             Microsoft Windows 10.0.26100
+        Platform                       Win32NT
+        PSCompatibleVersions           {1.0, 2.0, 3.0, 4.0…}
+        PSRemotingProtocolVersion      2.3
+        SerializationVersion           1.1.0.1
+        WSManStackVersion              3.0
     validations:
       required: true
   - type: textarea
