--- a/.github/ISSUE_TEMPLATE/bug-report-cn.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-cn.yml
@@ -10,8 +10,6 @@ body:
       label: 开始之前...
       description: 你是否已经做出努力?
       options:
-        - label: 你正在使用 PSCompletions 的最新版本。
-          required: true
         - label: 你已经阅读了项目的 README 文件。
           required: true
         - label: 你已经在 [Issues](https://github.com/abgox/PSCompletions/issues) 中搜索了相关问题。
@@ -19,12 +17,17 @@ body:
         - label: 如果问题和补全菜单的行为相关，请先检查 `psc menu config` 下的相关配置。
           required: true
         - label: 你已经查看了 https://pscompletions.abgox.com/
+  - type: input
+    id: version
+    attributes:
+      label: 当前使用的 PSCompletions 版本
+      description: 运行 `psc` 查看当前版本
+      placeholder: v6.2.0
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Powershell 版本
-      description: |
-        - [PowerShell (pwsh)](https://learn.microsoft.com/powershell/scripting/overview)
-        - [Windows PowerShell 5.1 (Windows 内置版本)](https://learn.microsoft.com/powershell/scripting/what-is-windows-powershell)
       render: console
       placeholder: |
         PS> $PSVersionTable
