ci(workflow): remove Import-Module step

--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -18,9 +18,7 @@ jobs:
 
       - name: Install module
         shell: pwsh
-        run: |
-          Install-Module PSCompletions -Repository PSGallery -Force
-          Import-Module -Name PSCompletions -Force
+        run: Install-Module PSCompletions -Repository PSGallery -Force
 
       - name: Generate list and update content
         shell: pwsh
