--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
+          git add -u
           git commit -m "chore: automatically update some content"
           git push
