--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,25 +12,25 @@
       "fileMatch": [
         "completions/*/language/*.json"
       ],
+      "url": "./schema/completion-manifest.en-US.json",
       "urls": [
         {
           "language": "zh",
-          "url": "schema/completion-manifest.zh-CN.json"
+          "url": "./schema/completion-manifest.zh-CN.json"
         }
-      ],
-      "url": "schema/completion-manifest.en-US.json"
+      ]
     },
     {
       "fileMatch": [
         "completions/*/config.json"
       ],
+      "url": "./schema/completion-config.en-US.json",
       "urls": [
         {
           "language": "zh",
-          "url": "schema/completion-config.zh-CN.json"
+          "url": "./schema/completion-config.zh-CN.json"
         }
-      ],
-      "url": "schema/completion-config.en-US.json"
+      ]
     }
   ]
 }
