docs(issue-templates): simplify issue titles and remove assignees

--- a/.github/ISSUE_TEMPLATE/completion-add-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request-cn.yml
@@ -1,8 +1,8 @@
 name: ✨ 补全添加请求
 description: 请求添加新补全
-title: "[Add Completion]: "
+title: "[Add]: "
 labels: ["completion"]
-assignees: [abgox]
+# assignees: [abgox]
 body:
   - type: input
     id: completion
