--- a/.github/ISSUE_TEMPLATE/completion-add-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-add-request.yml
@@ -1,8 +1,8 @@
 name: ✨ Add Completion Request
 description: Request to add a new completion
-title: "[Add Completion]: "
+title: "[Add]: "
 labels: ["completion"]
-assignees: [abgox]
+# assignees: [abgox]
 body:
   - type: input
     id: completion
