--- a/.github/ISSUE_TEMPLATE/completion-update-request-cn.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request-cn.yml
@@ -1,8 +1,8 @@
 name: ✨ 补全更新请求
 description: 请求更新现有补全
-title: "[Update Completion]: "
+title: "[Update]: "
 labels: ["completion"]
-assignees: [abgox]
+# assignees: [abgox]
 body:
   - type: input
     id: completion
