--- a/.github/ISSUE_TEMPLATE/completion-update-request.yml
+++ b/.github/ISSUE_TEMPLATE/completion-update-request.yml
@@ -1,8 +1,8 @@
 name: ✨ Update Completion Request
 description: Request to update a new completion
-title: "[Update Completion]: "
+title: "[Update]: "
 labels: ["completion"]
-assignees: [abgox]
+# assignees: [abgox]
 body:
   - type: input
     id: completion
