feat(schema): update

--- a/schema/completion-manifest.zh-CN.json
+++ b/schema/completion-manifest.zh-CN.json
@@ -72,6 +72,9 @@
     },
     "tip": {
       "markdownDescription": "补全的提示信息\n- 它一般由三部分组成: 用法(Usage) + 描述(Description) + 举例(Example)\n- 这里有一个示例:\n```json\n  \"tip\": [\n    \"U: -r, --revisions <REVSETS>\",\n    \"xxx (这里是描述信息)\",\n    \"E: -r '@-'   --- xxx (示例说明)\"\n    \"   -r 'x-'   --- xxx (示例说明)\"\n  ]\n  ```",
+      "examples": [
+        []
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/array-items-string"
@@ -79,7 +82,7 @@
         {
           "not": {
             "contains": {
-              "pattern": "\\n"
+              "pattern": "[\\r\\n]"
             }
           },
           "errorMessage": "数组中的每个项会在显示时末尾自动添加换行符，因此不允许使用换行符"
