--- a/schema/completion-manifest.en-US.json
+++ b/schema/completion-manifest.en-US.json
@@ -72,6 +72,9 @@
     },
     "tip": {
       "markdownDescription": "Completion item tip\n- General structure of the completion tip: `Usage` + `Description` + `Example`\n- Here is an example:\n```json\n  \"tip\": [\n    \"U: -r, --revisions <REVSETS>\",\n    \"xxx (Here is the description)\",\n    \"E: -r '@-'   --- xxx (Example description)\"\n    \"   -r 'x-'   --- xxx (Example description)\"\n  ]\n  ```",
+      "examples": [
+        []
+      ],
       "allOf": [
         {
           "$ref": "#/definitions/array-items-string"
@@ -79,7 +82,7 @@
         {
           "not": {
             "contains": {
-              "pattern": "\\n"
+              "pattern": "[\\r\\n]"
             }
           },
           "errorMessage": "Each item in the array will automatically add a line break at the end when displayed, so line breaks are not allowed."
