chore: update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,9 @@
         }
       ]
     }
-  ]
+  ],
+  "powershell.codeFormatting.trimWhitespaceAroundPipe": true,
+  "powershell.codeFormatting.useConstantStrings": true,
+  "powershell.codeFormatting.useCorrectCasing": true,
+  "powershell.scriptAnalysis.enable": false
 }
