ci: add git pull step to publish workflow

--- a/.github/workflows/publish-to-gallery.yml
+++ b/.github/workflows/publish-to-gallery.yml
@@ -15,5 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: Get latest changes
+        run: git pull
+
       - name: Validate and Publish
         run: .\scripts\publish-to-gallery.ps1
