--- a/.github/workflows/publish-to-gallery.yml
+++ b/.github/workflows/publish-to-gallery.yml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Get latest changes
-        run: git pull
+        run: |
+          git switch main
+          git pull
 
       - name: Validate and Publish
         run: .\scripts\publish-to-gallery.ps1
