--- a/.github/workflows/publish-to-gallery.yml
+++ b/.github/workflows/publish-to-gallery.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.repository.default_branch}}
 
       - name: Validate and Publish
         run: .\scripts\publish-to-gallery.ps1
