docs(issue-templates): update

--- a/.github/ISSUE_TEMPLATE/bug-report-cn.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-cn.yml
@@ -16,13 +16,13 @@ body:
           required: true
         - label: 如果问题和补全菜单的行为相关，请先检查 `psc menu config` 下的相关配置。
           required: true
-        - label: 你已经查看了 https://pscompletions.abgox.com/
+        - label: 你已经查看了 https://pscompletions.abgox.com/faq/
   - type: input
     id: version
     attributes:
       label: 当前使用的 PSCompletions 版本
       description: 运行 `psc` 查看当前版本
-      placeholder: v6.2.0
+      placeholder: v6.6.0
     validations:
       required: true
   - type: textarea
