--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -16,13 +16,13 @@ body:
           required: true
         - label: If it is a problem related to menu, please ensure that you have checked `psc menu config`.
           required: true
-        - label: You have visit https://pscompletions.abgox.com/
+        - label: You have visit https://pscompletions.abgox.com/faq/
   - type: input
     id: version
     attributes:
       label: Current version of PSCompletions
       description: Run `psc` to get the current version
-      placeholder: v6.2.0
+      placeholder: v6.6.0
     validations:
       required: true
   - type: textarea
