--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -15,7 +15,7 @@ body:
           required: true
         - label: If the feature request is related to menu, please ensure that you have checked `psc menu config`.
           required: true
-        - label: You have visit https://pscompletions.abgox.com/
+        - label: You have visit https://pscompletions.abgox.com/faq/
   - type: textarea
     id: description
     attributes:
@@ -31,7 +31,7 @@ body:
     attributes:
       label: Current version of PSCompletions
       description: Run `psc` to get the current version
-      placeholder: v6.2.0
+      placeholder: v6.6.0
     validations:
       required: true
   - type: textarea
